New parent and dependencies