@@ -7,13 +7,13 @@
     <parent>
         <groupId>cz.vhromada.maven</groupId>
         <artifactId>parent</artifactId>
-        <version>2.0.1</version>
+        <version>2.0.2</version>
     </parent>
 
     <groupId>cz.vhromada.common</groupId>
     <artifactId>common</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
 
     <name>Common</name>
     <description>Java library for common components</description>
@@ -51,17 +51,12 @@
             <dependency>
                 <groupId>cz.vhromada.converters</groupId>
                 <artifactId>converters-core</artifactId>
-                <version>3.0.3</version>
+                <version>3.0.4</version>
             </dependency>
             <dependency>
                 <groupId>cz.vhromada.validation</groupId>
                 <artifactId>result</artifactId>
-                <version>2.0.3</version>
-            </dependency>
-            <dependency>
-                <groupId>cz.vhromada.test</groupId>
-                <artifactId>mockito-jupiter</artifactId>
-                <version>1.0.2</version>
+                <version>2.0.4</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -71,13 +66,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--add-modules java.xml.bind</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
